Fix tab focusing to system tray in OOBE screen.

Recently, UnifiedSystemTray replaced SystemTray class.
WebUILoginView ignored UnifiedSystemTray because I misunderstood
views login will completely replace WebUILoginView. However,
WebUILoginView is still used in OOBE screen, so we should fix it to also
work with UnifiedSystemTray.

TEST=manual
BUG=853713

Change-Id: I3842eba971a928af5ba1599283c52f9711d83cc4
Reviewed-on: https://chromium-review.googlesource.com/1107520
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Reviewed-by: James Cook <jamescook@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570996}
Former-commit-id: 2c474b750cacded56a3164bb9cbe3619121253e7