ash/root_window_controller.cc
@@ -38,6 +38,9 @@
 #include "ash/shell_state.h"
 #include "ash/system/status_area_layout_manager.h"
 #include "ash/system/status_area_widget.h"
+#include "ash/system/tray/system_tray.h"
+#include "ash/system/tray/tray_background_view.h"
+#include "ash/system/unified/unified_system_tray.h"
 #include "ash/touch/touch_hud_debug.h"
 #include "ash/touch/touch_hud_projection.h"
 #include "ash/touch/touch_observer_hud.h"
@@ -393,6 +396,15 @@ SystemTray* RootWindowController::GetSystemTray() {
   // triggers this for valid reasons, it should test status_area_widget first.
   CHECK(shelf_->shelf_widget()->status_area_widget());
   return shelf_->shelf_widget()->status_area_widget()->system_tray();
+}
+
+bool RootWindowController::IsSystemTrayVisible() {
+  TrayBackgroundView* tray = nullptr;
+  if (features::IsSystemTrayUnifiedEnabled())
+    tray = GetStatusAreaWidget()->unified_system_tray();
+  else
+    tray = GetSystemTray();
+  return tray && tray->GetWidget()->IsVisible() && tray->visible();
 }
 
 bool RootWindowController::CanWindowReceiveEvents(aura::Window* window) {
